--- a/cetimr-site/index.html
+++ b/cetimr-site/index.html
@@ -12,9 +12,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="#cursos">Cursos</a></li>
-                <li><a href="#gremio">Grêmio</a></li>
-                <li><a href="#contato">Contato</a></li>
+                <li><a href="historia.html">História</a></li>
+                <li><a href="gremio.html">Grêmio</a></li>
+                <li><a href="sobre.html">O Predio</a></li>
                 <li><a href="aluno-login.html">Área do Aluno</a></li>
             </ul>
         </nav>
@@ -28,10 +28,7 @@
     <section id="cursos">
         <h2>Cursos Oferecidos</h2>
         <ul>
-            <li>Educação Infantil</li>
-            <li>Ensino Fundamental</li>
             <li>Ensino Médio</li>
-            <li>Educação de Jovens e Adultos</li>
         </ul>
     </section>
 
